fix font sizes on mobile

--- a/docs/_sass/custom/custom.scss
+++ b/docs/_sass/custom/custom.scss
@@ -68,16 +68,20 @@ img.full_width {
 
 .main-content h2 {
     border-bottom: 1px solid #a5a5a5;
+    font-size: 24px !important;
 }
 
 .main-content h3 {
     font-size: 20px !important;
+    margin-top: 1.2em;
 }
 
 .main-content h4 {
     font-size: 16px !important;
     text-transform: none;
     letter-spacing: normal;
+    font-weight: bold;
+    margin-top: 1.4em;
 }
 
 .search-input {
